<resources>
    <string name="app_name">Rent_It</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="create_account">Create Account</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_search">Find Item</string>
    <string name="nav_list">List Item</string>
    <string name="nav_trade">Trade Item</string>
    <string name="nav_rental">My Rentals</string>
    <string name="nav_inventory">My Inventory</string>
    <string name="nav_inbox">My Inbox</string>
    <string name="nav_account">My Account</string>
    <string name="nav_claim">My Claims</string>
    <string name="nav_logout">Logout</string>

    <!-- Item Details-->
    <string name="item_title">Title</string>
    <string name="item_description">Description</string>
    <string name="item_condition">Condition</string>
    <string name="item_location">Zipcode</string>
    <string name="item_city">City</string>
    <string name="item_category">Category</string>
    <string name="item_tags">Tags</string>
    <string name="item_value">Value</string>
    <string name="item_rate">Daily Rate</string>
    <string name="item_image">Image</string>
    <string name="item_visibility">Visibility</string>

    <!--Category-->
    <string name="category_prompt">Choose a Category</string>
    <string-array name="category_array">
        <item>Choose a Category</item>
        <item>Vehicles and Equipment</item>
        <item>Sports</item>
        <item>Outdoor Gear</item>
        <item>Party Supplies</item>
        <item>Garden</item>
        <item>Tools</item>
        <item>Clothes</item>
        <item>Electronics</item>
        <item>Books</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="owner_reason_array">
        <item>Choose a Reason</item>
        <item>Item Damaged</item>
        <item>Renter not responding</item>
        <item>Other</item>
    </string-array>

    <string-array name="renter_reason_array">
        <item>Choose a Reason</item>
        <item>Item damaged/does not work</item>
        <item>Item not as described</item>
        <item>Other</item>
    </string-array>

</resources>
