<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:src="@drawable/preview"
                android:padding="0dp"/>

            <!--Title-->
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_title"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />

            <!--Item Rating-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <RatingBar
                        android:id="@+id/overallRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:paddingTop="5dp"
                        android:layout_marginLeft="10dp"
                        style="?android:attr/ratingBarStyleSmall"
                        android:stepSize="1.0"
                        android:isIndicator="true"
                        android:rating="0" />

                    <!--<TextView
                        android:id="@+id/label17"
                        android:textColor="@color/colorLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(2)"
                        android:textSize="13sp"
                        android:layout_marginLeft="10dp"/>-->

                    <TextView
                        android:id="@+id/city"
                        android:textColor="@color/colorLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_city"
                        android:textSize="18sp"
                        android:paddingLeft="15dp"/>

                </LinearLayout>

                <!--DailyRate-->
                <TextView
                    android:id="@+id/rate"
                    android:textColor="@color/colorLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ -.--/daily"
                    android:textSize="28sp"
                    android:gravity="right"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginTop="10dp"
                    android:paddingRight="15dp"/>





            </LinearLayout>


            <!--Description-->
            <TextView
                android:id="@+id/description"
                android:textColor="@color/colorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_description"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <!--Condition-->
            <TextView
                android:id="@+id/condition"
                android:textColor="@color/colorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_condition"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

                <!--City-->
                <!--<TextView
                    android:id="@+id/city"
                    android:textColor="@color/colorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/item_city"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>-->

                <!--Daily Rate-->
                <!--<TextView
                    android:id="@+id/rate"
                    android:textColor="#AA3939"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/item_rate"
                    android:textSize="20sp"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:paddingRight="15dp"/>-->

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/greyButton" />

            <!--<LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingTop="0dp">

                <ImageView
                    android:id="@+id/ownerImage"
                    android:layout_width="0dp"
                    android:layout_weight=".20"
                    android:layout_height="60dp"
                    android:src="@drawable/placeholder"
                    android:padding="10dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight=".80">

                    <TextView
                        android:id="@+id/ownerName"
                        android:textColor="@color/colorLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Owner Name"
                        android:textSize="18sp"
                        android:layout_marginLeft="10dp"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <RatingBar
                            android:id="@+id/ownerRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            android:layout_marginLeft="10dp"
                            style="?android:attr/ratingBarStyleSmall"
                            android:stepSize="1.0"
                            android:isIndicator="true"
                            android:rating="2.0" />

                        &lt;!&ndash;<TextView
                            android:id="@+id/label13"
                            android:textColor="@color/colorLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="(2)"
                            android:textSize="13sp"
                            android:layout_marginLeft="10dp"/>&ndash;&gt;


                    </LinearLayout>

                    <TextView
                        android:id="@+id/label13"
                        android:textColor="@color/colorLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Member since 2017"
                        android:textSize="13sp"
                        android:layout_marginLeft="10dp"/>


                </LinearLayout>



            </LinearLayout>

            <Button
                android:id="@+id/ownerReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Read Owner Reviews"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonshape2"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>-->


            <!--Item Review-->
            <TextView
                android:id="@+id/lblReviews"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Reviews"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/rTitle"
                android:textColor="@color/colorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text=""
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

                <RatingBar
                android:id="@+id/rRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                style="?android:attr/ratingBarStyleSmall"
                android:stepSize="1.0"
                android:isIndicator="true"
                android:rating="0" />

                <TextView
                android:id="@+id/rReviewer"
                android:textColor="@color/colorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

            <TextView
                android:id="@+id/rComment"
                android:textColor="@color/colorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="description ..."
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/readMoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Read More Reviews"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:background="@drawable/buttonshape2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_gravity="center"
                android:onClick="loadItemReviews"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/greyButton" />

            <!--Owner Info-->
            <TextView
                android:id="@+id/lblOwner"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Owner"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingTop="0dp">

                <ImageView
                    android:id="@+id/ownerImage"
                    android:layout_width="0dp"
                    android:layout_weight=".20"
                    android:layout_height="60dp"
                    android:src="@drawable/placeholder"
                    android:padding="10dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight=".80">

                    <TextView
                        android:id="@+id/ownerName"
                        android:textColor="@color/colorLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Owner Name"
                        android:textSize="18sp"
                        android:layout_marginLeft="10dp"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <RatingBar
                            android:id="@+id/ownerRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            android:layout_marginLeft="10dp"
                            style="?android:attr/ratingBarStyleSmall"
                            android:stepSize="1.0"
                            android:isIndicator="true"
                            android:rating="2.0" />

                        <!--<TextView
                            android:id="@+id/label13"
                            android:textColor="@color/colorLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="(2)"
                            android:textSize="13sp"
                            android:layout_marginLeft="10dp"/>-->


                    </LinearLayout>

                    <TextView
                        android:id="@+id/label13"
                        android:textColor="@color/colorLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Member since 2017"
                        android:textSize="13sp"
                        android:layout_marginLeft="10dp"/>


                </LinearLayout>



            </LinearLayout>

            <Button
                android:id="@+id/ownerReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Read Owner Reviews"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonshape2"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>
            <Button
                android:id="@+id/contact_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Contact Owner / Request Booking"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorAccent"
                android:layout_gravity="center_horizontal"/>
            <!--android:onClick=""-->

        </LinearLayout>
    </ScrollView>

</LinearLayout>